加入了 Zurb Foundation 框架的支持

--- a/app/views/portals/index.html.erb
+++ b/app/views/portals/index.html.erb
@@ -1,2 +1,9 @@
-<h1 class="logo">Happiness</h1>
-<p>Find me in app/views/portals/index.html.erb</p>
+<div class="row">
+  <div class="ten columns centered">
+    <h1>
+      <%= link_to 'Happiness', root_path, class: 'logo',
+          title: 'Let parents and children grow up together!' %>
+    </h1>
+    <h6 class="subheader">Let parents and children grow up together!</h6>
+  </div>
+</div>
