--- a/app/views/portals/index.html.erb
+++ b/app/views/portals/index.html.erb
@@ -1,9 +1,14 @@
 <div class="row">
-  <div class="ten columns centered">
+  <div>
     <h1>
       <%= link_to 'Happiness', root_path, class: 'logo',
           title: 'Let parents and children grow up together!' %>
     </h1>
     <h6 class="subheader">Let parents and children grow up together!</h6>
+  </div>
+</div>
+<div class="row">
+  <div class="three columns centered">
+    <%= link_to 'Sign up now!', '#', class: 'large radius success button' %>
   </div>
 </div>
