创建了临时的注册页面

--- a/app/views/portals/index.html.erb
+++ b/app/views/portals/index.html.erb
@@ -9,6 +9,7 @@
 </div>
 <div class="row">
   <div class="three columns centered">
-    <%= link_to 'Sign up now!', '#', class: 'large radius success button' %>
+    <%= link_to 'Sign up now!', signup_path,
+        class: 'large radius success button' %>
   </div>
 </div>
