--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,5 +25,8 @@
 </head>
 <body>
   <%= yield %>
+  <div class="row">
+    <%= debug(params) if Rails.env.development? %>
+  </div>
 </body>
 </html>
