实现注册表单的基本功能，允许用户注册并导航至用户信息页面

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,3 +6,15 @@
   background-color: #eaeaea;
   border: 1px solid #cdcdcd;
 }
+
+/* Registration Form */
+.new_user {
+  input[type=submit] {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .field_with_error input {
+    @extend .error;
+  }
+}
